test: 리팩토링 후 테스트 변경